--- a/backend/env.example
+++ b/backend/env.example
@@ -18,7 +18,10 @@ FIREBASE_DATABASE_URL=https://your-project-id.firebaseio.com
 # Session Configuration
 SESSION_SECRET=your-session-secret
 
-# Frontend URL
+# Allowed Origins for CORS (comma-separated URLs)
+ALLOWED_ORIGINS=http://localhost:3000,https://supeai.onrender.com,https://www.supeai.onrender.com
+
+# Frontend URL (legacy - kept for backward compatibility)
 FRONTEND_URL=http://localhost:3000
 
 # Other Configuration
